--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
 
     <repositories>
         <repository>
-                <id>prime-repo</id>
-                <name>Prime Repo</name>
-                <url>http://repository.primefaces.org</url>
+            <url>http://repository.primefaces.org/</url>
+            <id>PrimeFaces-maven-lib</id>
+            <layout>default</layout>
+            <name>Repository for library PrimeFaces-maven-lib</name>
         </repository>
     </repositories>
         
@@ -25,7 +26,13 @@
     </properties>
     
     <dependencies>
-         <dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <version>2.2.7</version>
+        </dependency>
+        
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -56,20 +63,6 @@
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
             <version>10.12.1.1</version>
-        </dependency>
-        
-        <!-- Faces Implementation -->
-        <dependency>
-            <groupId>com.sun.faces</groupId>
-            <artifactId>jsf-impl</artifactId>
-            <version>2.2.4</version>
-        </dependency>
-        
-        <!-- Faces Library -->
-        <dependency>
-            <groupId>com.sun.faces</groupId>
-            <artifactId>jsf-api</artifactId>
-            <version>2.2.4</version>
         </dependency>
         
         <!-- Primefaces -->
