--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>pages/accueil.xhtml</welcome-file>
+        <welcome-file>pages/home.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
