--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
         <!-- Spring -->
         <spring.version>4.3.18.RELEASE</spring.version>
+        <netbeans.hint.license>licenseheader</netbeans.hint.license>
     </properties>
 
     <dependencies>
